updated spawn defs for all pokemon, updated olysos and varitas